# RustNN

./: Cargo.toml
src/: lib.rs
tests/: xor.rs
